docs/api/v/2024.2.3/world/scene.md
#![](../../../../../../images/luxe-dark.svg){width="96em"}

# `luxe` API (`2024.2.3`)  


---

## `luxe: world/scene` module

- [Scene](#scene)   
- [SceneReady](#sceneready)   

---

### Scene
`:::js import "luxe: world/scene" for Scene`
> no docs found

- [create](#Scene.create+2)(**world**: `World`, **scene**: `Scene`)

<hr/>
<endpoint module="luxe: world/scene" class="Scene" signature="create(world : World, scene : Scene)"></endpoint>
<signature id="Scene.create+2">Scene.create(**world**: `World`, **scene**: `Scene`)
<a class="headerlink" href="#Scene.create+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

### SceneReady
`:::js import "luxe: world/scene" for SceneReady`
> no docs found

- [ready](#SceneReady.ready+2)(**world**: `World`, **scene**: `Entity`)
- [editor_ready](#SceneReady.editor_ready+2)(**world**: `World`, **scene**: `Entity`)
- [tick](#SceneReady.tick)(**delta**: `Num`)
- [editor_tick](#SceneReady.editor_tick)(**delta**: `Num`)
- [destroy](#SceneReady.destroy+2)(**world**: `World`, **scene**: `Entity`)
- [editor_destroy](#SceneReady.editor_destroy+2)(**world**: `World`, **scene**: `Entity`)

<hr/>
<endpoint module="luxe: world/scene" class="SceneReady" signature="ready(world : World, scene : Entity)"></endpoint>
<signature id="SceneReady.ready+2">SceneReady.ready(**world**: `World`, **scene**: `Entity`)
<a class="headerlink" href="#SceneReady.ready+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js SceneReady`
> no docs found   

<endpoint module="luxe: world/scene" class="SceneReady" signature="editor_ready(world : World, scene : Entity)"></endpoint>
<signature id="SceneReady.editor_ready+2">SceneReady.editor_ready(**world**: `World`, **scene**: `Entity`)
<a class="headerlink" href="#SceneReady.editor_ready+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js SceneReady`
> no docs found   

<endpoint module="luxe: world/scene" class="SceneReady" signature="tick(delta : Num)"></endpoint>
<signature id="SceneReady.tick">SceneReady.tick(**delta**: `Num`)
<a class="headerlink" href="#SceneReady.tick" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: world/scene" class="SceneReady" signature="editor_tick(delta : Num)"></endpoint>
<signature id="SceneReady.editor_tick">SceneReady.editor_tick(**delta**: `Num`)
<a class="headerlink" href="#SceneReady.editor_tick" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: world/scene" class="SceneReady" signature="destroy(world : World, scene : Entity)"></endpoint>
<signature id="SceneReady.destroy+2">SceneReady.destroy(**world**: `World`, **scene**: `Entity`)
<a class="headerlink" href="#SceneReady.destroy+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: world/scene" class="SceneReady" signature="editor_destroy(world : World, scene : Entity)"></endpoint>
<signature id="SceneReady.editor_destroy+2">SceneReady.editor_destroy(**world**: `World`, **scene**: `Entity`)
<a class="headerlink" href="#SceneReady.editor_destroy+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

